--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.5.0",
     "redux": "^4.1.2",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
